Feat: tests working for 32

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,16 +1,17 @@
 CC=gcc
 FLAGS=-m32
 DEBUG_FLAGS=-g -fsanitize=address
-SRC=$(wildcard *.c)
-BINS=$(SRC:%.c=%)
+SRC=fork.c segfault.c
+BINS=$(SRC:%.c=%) $(SRC:%.c=%_32)
 LIBS=
 OBJ=
 RM =rm -rf
 
-all: $(BINS)
-
-%: $(SRC)/%.c
-	$(FLAGS) -o $@ $<
+all:
+	$(CC) $(FLAGS) fork.c -o fork
+	$(CC) $(FLAGS) fork.c -o fork_32
+	$(CC) $(FLAGS) segfault.c -o segfault
+	$(CC) $(FLAGS) segfault.c -o segfault_32
 
 clean:
 
